@@ -520,7 +520,6 @@
             </activation>
             <build>
                 <plugins>
-
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
@@ -533,10 +532,15 @@
                             </excludes>
                             <systemProperties>
                                 <property>
-                                    <name>queryUseMinicluster</name>
-                                    <value>true</value>
+                                    <name>querySkipUsingMinicluster</name>
+                                    <value>false</value>
+                                </property>
+                                <property>
+                                    <name>buildCubeUsingProvidedData</name>
+                                    <value>false</value>
                                 </property>
                             </systemProperties>
+                            <argLine>-Xms1G -Xmx6G -XX:PermSize=1G -XX:MaxPermSize=2G</argLine>
                         </configuration>
                     </plugin>
 
